# Kursovaya_6

./: .env  .env.sample  README.md  pyproject.toml
blog/: forms.py
config/: settings.py  urls.py
mailing/: receivers.py
mailing/templates/mailing/: client_form.html  index.html
users/: forms.py
