[tool.poetry]
name = "kursovaya-6"
version = "0.1.0"
description = ""
authors = ["Сергей <sergey.vasilev.98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.29.0"
black = "^24.10.0"
django-apscheduler = "^0.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
